--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "nikic/fast-route": "^1.3",
         "webonyx/graphql-php": "^15.2",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
