--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,21 @@
 {
-    "name": "scandiweb/fullstack",
-    "type": "project",
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        },
-        "psr-0": {
-            "": "src/"
-        }
+  "name": "scandiweb/fullstack",
+  "type": "project",
+  "scripts": {
+    "dev": "php -S localhost:8000 -t public"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
     },
-    "require": {
-        "nikic/fast-route": "^1.3",
-        "webonyx/graphql-php": "^15.2",
-        "psr/container": "^2.0",
-        "vlucas/phpdotenv": "^5.6"
+    "psr-0": {
+      "": "src/"
     }
+  },
+  "require": {
+    "nikic/fast-route": "^1.3",
+    "webonyx/graphql-php": "^15.2",
+    "psr/container": "^2.0",
+    "vlucas/phpdotenv": "^5.6"
+  }
 }
